# luacad

./: .gitignore  CMakeLists.txt  README.md
Modules/: FindOpenCSG.cmake
base/: .cad.lua.swp  Sans Titre.off  cad.lua  exemple.lua  test.lua
editor/: CMakeLists.txt  dohelp-pkgIndex.tcl  dohelp.tcl  editor-csg.lua  luacad-editor.tcl
editor/docs/data/: triceratops.stl
editor/docs/examples/: advanced-1-lattice.lua  advanced-8-chest.lua  example-1-lua.lua  example-12-scripts.lua  example-2-primitives.lua  example-3-transformations.lua  example-4-operations.lua  example-5-functions.lua  example-6-poly.lua  example-7-volume.lua  example-8-2loop.lua  tour-1-lua.lua  tour-11-holes.lua  tour-3-transformations.lua  tour-7-informations.lua  tour-9-2loop.lua
editor/docs/guide/: allo  intro
editor/docs/ref/: bbox  cylinder  difference  import  resize  rotate  scale  sphere  transform  union
luacad/: CMakeLists.txt  cache.lua  install.sh  luacad-editor.tcl  luacad-simpler.lua-to-remove  luacad.lua  luacad0.lua  matrix-extra.lua  matrix.lua  table-extra.lua  test-matrix.lua  test-table-extra.lua  test_matrix.lua  triceCut.stl  uncone.stl
luacad/docs/examples/: advanced-2-arch.lua  advanced-3-stairs.lua  advanced-4-flashlight.lua  advanced-5-3cross.lua  advanced-6-vase.lua  advanced-7-football.lua  example-11-holes.lua  example-2-primitives.lua  example-3-transformations.lua  example-5-functions.lua  example-7-volume.lua  example-9-2loop.lua  tour-10-gears.lua  tour-12-importexport.lua  tour-2-primitves.lua  tour-4-operations.lua  tour-5-functions.lua  tour-6-poly.lua  tour-8-2loop.lua
luacad/docs/guide/: examples  howto  intro
luacad/docs/ref/: cone  cube  export  hull  intersection  polyhedron
luacad/junk/: luacad-old.lua  luacad3.lua
lualibs/: CMakeLists.txt  nef2.cc  ocsg.cc-old  toto  wrap_opencsg.cc
others/lua-matrix/lua/: matrix.lua
others/lua-matrix/test/: test_complex.lua
others/luafilesystem/: Makefile  config
src/: GeometryUtils.cc  Reindexer.h  cgal.h  cgalutils.cc  cgalutils.h  nef.cc  nef.h  nef2.h  ocsg.cc  ocsg.h  testglfw.c  wrap_nef.cc
tcllibs/: CMakeLists.txt  tclua.c
tcllibs/hello/: pkgIndex.tcl
tclua/: CMakeLists.txt  hello.c
tclua/tclua/: pkgIndex.tcl
test/: csg.lua  example-tclua.lua  loop.lua  test-basic.lua  test-coroutine.lua  test-mods.lua  test-opencsg.lua  test-ops.lua  test-recursion.lua  test-tclua.tcl-old  test-transform.lua  transp.tcl  vise.lua  yo-a.off  yo-a.stl  yo-b.stl  yo-bb.stl  yo-c.stl  yo-e.stl  yo-f.stl  yo-g.stl  yo.stl  yodude.lua  yoyo.off
